gcc/testsuite/g++.dg/reflect/init19.C
// PR c++/125280
// { dg-do compile { target c++26 } }
// { dg-additional-options "-freflection" }

struct C { decltype(^^::) i; };
struct N { int i; };

template<typename T>
struct X : T { };

auto a = X<C>{}; // { dg-error "outside a constant-evaluated context" }
auto b = X<N>{};
